@@ -1,0 +1,39 @@
+/*
+ * Copyright (c) 2016. See AUTHORS file.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package com.mbrlabs.mundus.core;
+
+import com.mbrlabs.mundus.commons.Scene;
+import com.mbrlabs.mundus.terrain.TerrainGroup;
+
+/**
+ * @author Marcus Brummer
+ * @version 07-02-2016
+ */
+public class EditorScene extends Scene {
+
+    /**
+     * The terrain group is just used internally to interact with the terrains efficently.
+     * It holds references of the terrain instances in the scene graph.
+     */
+    public TerrainGroup terrainGroup;
+
+    public EditorScene() {
+        super();
+        terrainGroup = new TerrainGroup();
+    }
+
+}
